Upstream changes for v2.1.0 release (#22)
* Upstream changes for v2.1.0 release *
---------
